fixed signup headline spacing

--- a/templates/less/components/header.less
+++ b/templates/less/components/header.less
@@ -10,11 +10,13 @@
 .desktopHeader {
   visibility: hidden;
   display: none;
+  margin-bottom: 60px;
 }
-@media (min-width : 451px) {
 
+@media (min-width : 451px) {
   .mobileHeader {
     visibility: hidden;
+    display: none;
   }
   .desktopHeader {
     visibility: visible;
