--- a/templates/less/styles.less
+++ b/templates/less/styles.less
@@ -48,7 +48,10 @@ h3 {
 
 .innerForm {
   text-align: center;
+  margin-top: initial;
+
   @media (min-width : 451px) {
     text-align: right;
+    margin-top: 60px;
   }
 }
